--- a/assets/www/styles/layout-vars.scss
+++ b/assets/www/styles/layout-vars.scss
@@ -1,1 +1,1 @@
-$app-inner-width: 25vw;
+$app-inner-width: 75vw;
